--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -6,7 +6,6 @@
         </head>
         <body style = "margin: 0; padding: 0;">
                 <header style = "background-color: #FF0000; height: 70px; width: 100%"></header>
-                <footer style = "background-color: #00FF00; text-align: center; height: 60px; width: 100%">Best School</footer>
+                <footer style = "background-color: #00FF00; height: 60px; width: 100%; display: flex; align-items: center; justify-content: center; ">Best School</footer>
         </body>
 </html>
-
